--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, bmall.camera360.com, service.ilovepdf.com, qianji.xxoojoke.com
+hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, bmall.camera360.com, service.ilovepdf.com, qianji.xxoojoke.com, ssl-api.itranslateapp.com, xluser-ssl.xunlei.com
 
 
 
@@ -6,7 +6,7 @@ hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Kuwo.js
 
 # 傲软抠图 会员权限
-https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/apowersoft.js
+https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Apowersoft.js
 
 # 扫描全能王 Pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
@@ -14,14 +14,14 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # 彩云天气 VIP 
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ColorWeather.js
 
-# 百度网盘 在线视频倍率/清晰度
+# 百度网盘 倍率/清晰度
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/BaiduCloud.js
 
-# 白描 黄金会员
-^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/baimiao.js
+# ScanScan（白描） 黄金会员
+^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ScanScan.js
 
-# 目标地图 解锁订阅
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zmzjz.js
+# GoalMap（目标地图） 解锁订阅
+^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/GoalMap.js
 
 # 美颜相机 解锁VIP
 ^https:\/\/api\.meiyan\.com\/vip\/user_info\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/myxj.js
@@ -38,8 +38,11 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # 网速测试大师 解锁订阅
 ^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/wscsds.js
 
+# 迅雷 解锁VIP
+^https://xluser-ssl.xunlei.com/xluser.core.login/v3/getuserinfo url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Xunlei.js
+
 # APTV 解锁订阅
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/aptv.js
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/APTV.js
 
 # Bilibili 1080P+ 
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilifj.js
@@ -47,34 +50,37 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # Bilibili 广告
 ^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilibili_splash.js
 
-# Collart 拼图趣 解锁订阅
+# Collart 解锁订阅
 ^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Collart.js
 
+# iTranslate 解锁订阅
+^https://ssl-api.itranslateapp.com/accounts/v4/subscriptions/verify/ios url script-request-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/iTranslate.js
+
 # Lightroom 解锁订阅
-^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lightroom.js
+^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Lightroom.js
 
 # LovePDF 解锁订阅
-^https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lovePdf.js
+^https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/LovePDF.js
 
 # MX滤镜大师 解锁订阅
 ^https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/MIX.js
 
-# Noted 录音笔记 解锁订阅
-^https:\/\/subscription-api\.notedapp\.io\/api\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/noteb.js
+# Noted 解锁订阅
+^https:\/\/subscription-api\.notedapp\.io\/api\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Noted.js
 
 # Pdfexpert Pro
 ^https:\/\/license\.pdfexpert\.com\/api\/2\.0\/pdfexpert6\/subscription\/refresh url script-request-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Pdfexpert.js
 
-# PicsArt美易 Pro
+# PicsArt Pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/PicsArt.js
 
 # Pillow 解锁订阅
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Pillow.js
 
-# Pixelance Al照片修复 解锁订阅
+# Pixelance 解锁订阅
 ^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Pixelance.js
 
-# PrettyUp视频美化 解锁订阅
+# PrettyUp 解锁订阅
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/PrettyUp.js
 
 # ProKnockOut 解锁订阅
@@ -86,7 +92,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # Sorted 解锁订阅
 ^https:\/\/api\.sortedapp\.com\/receipts\/verify url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Sorted.js
 
-# Symbolab计算器 解锁订阅
+# Symbolab 解锁订阅
 ^https?:\/\/scibug\.com\/appleSubscriptionValidate$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Symbolab.js
 
 # TikTok 解锁地区
@@ -110,7 +116,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
 
 # Vision 个人OKR目标 解锁订阅
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vision.js
+^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Vision.js
 
 # VivaVideo 解锁VIP
 ^https:\/\/(xy-viva\.kakalili|api-chn.rthdo)\.com\/api\/rest\/u\/vipVerifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VivaVideo.js
