--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -54,7 +54,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Collart.js
 
 # iTranslate 解锁订阅
-^https://ssl-api.itranslateapp.com/accounts/v4/subscriptions/verify/ios url script-request-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/iTranslate.js
+https://ssl-api.itranslateapp.com/accounts/v4/subscriptions/verify/ios url script-request-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/iTranslate.js
 
 # Lightroom 解锁订阅
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Lightroom.js
