--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -17,10 +17,10 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # 百度网盘 倍率/清晰度
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/BaiduCloud.js
 
-# ScanScan（白描） 黄金会员
+# 白描 黄金会员
 ^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ScanScan.js
 
-# GoalMap（目标地图） 解锁订阅
+# 目标地图 解锁订阅
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/GoalMap.js
 
 # 美颜相机 解锁VIP
