--- a/Rewrite/Rewrite_Youtubeads.conf
+++ b/Rewrite/Rewrite_Youtubeads.conf
@@ -4,6 +4,8 @@
 #脚本作者：  DivineEngine,app2smile,Maasea,ddgksf2013
 #更新时间：  2022-10-19
 #使用说明：  用于视频广告，首页广告，播放页列表广告及贴片广告，不适用允许 UDP 转发的节点及 Premium
+#更新时间：  2022-10-20
+#使用说明：  用于视频广告，首页广告，播放页列表广告及贴片广告
 #通知频道：  https://t.me/ddgksf2021
 #原始仓库：  https://github.com/DivineEngine
 #原始仓库：  https://github.com/Maasea
@@ -14,7 +16,9 @@
 hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com
 
 # ======= 视频广告 ======= #
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url script-request-header https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube-fake.js
+#^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url script-request-header https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube-fake.js
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) url 302 $1$2$3
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
 
 # ======= 贴片广告 ======= #
 ^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/player url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube-player.js
