--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,11 +1,8 @@
-hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, bmall.camera360.com, service.ilovepdf.com, qianji.xxoojoke.com, ssl-api.itranslateapp.com, xluser-ssl.xunlei.com, api.aliyundrive.com, dida365.com, backend.getdrafts.com, notability.com
+hostname = vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, service.ilovepdf.com, qianji.xxoojoke.com, ssl-api.itranslateapp.com, xluser-ssl.xunlei.com, api.aliyundrive.com, dida365.com, backend.getdrafts.com, notability.com
 
 
 # 阿里云盘 首页优化
 ^https?:\/\/api\.aliyundrive\.com\/apps\/v\d\/users\/apps\/widgets$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/alidrive.js
-
-# 酷我音乐 SVIP 
-^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Kuwo.js
 
 # 傲软抠图 会员权限
 https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Apowersoft.js
@@ -31,9 +28,6 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # 美颜相机 解锁VIP
 ^https:\/\/api\.meiyan\.com\/vip\/user_info\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/myxj.js
 
-# 奇妙组件 解锁订阅
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/qmzj.js
-
 # 钱迹 解锁VIP
 ^https:\/\/qianji\.xxoojoke\.com\/vip\/configios url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/qj.js
 
@@ -45,9 +39,6 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # 音频剪辑提取 解锁订阅
 ^https:\/\/fufei\.fengyunsoft\.cn\/api\/client\/info url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ypjjtq.js
-
-# 网速测试大师 解锁订阅
-^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/wscsds.js
 
 # 迅雷 解锁VIP
 ^https://xluser-ssl.xunlei.com/xluser.core.login/v3/getuserinfo url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Xunlei.js
@@ -75,9 +66,6 @@ https://ssl-api.itranslateapp.com/accounts/v4/subscriptions/verify/ios url scrip
 
 # LovePDF 解锁订阅
 ^https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/LovePDF.js
-
-# MX滤镜大师 解锁订阅
-^https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/MIX.js
 
 # Notability 解锁订阅
 ^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Notability.js
