--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, service.ilovepdf.com, qianji.xxoojoke.com, ssl-api.itranslateapp.com, xluser-ssl.xunlei.com, api.aliyundrive.com, dida365.com, backend.getdrafts.com, notability.com
+hostname = vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, service.ilovepdf.com, qianji.xxoojoke.com, ssl-api.itranslateapp.com, xluser-ssl.xunlei.com, api.aliyundrive.com, dida365.com, backend.getdrafts.com, notability.com, awvp.aoscdn.com
 
 
 # 阿里云盘 首页优化
@@ -6,6 +6,9 @@ hostname = vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsa
 
 # 傲软抠图 会员权限
 https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Apowersoft.js
+
+# 傲软投屏 解锁VIP
+^https:\/\/awvp\.aoscdn\.com\/base\/vip\/client\/authorizations url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/artp.js
 
 # 扫描全能王 Pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
