--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, service.ilovepdf.com, qianji.xxoojoke.com, ssl-api.itranslateapp.com, xluser-ssl.xunlei.com, api.aliyundrive.com, dida365.com, backend.getdrafts.com, notability.com, awvp.aoscdn.com
+hostname = vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, *.cyapi.cn, adx.sogaha.cn, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, service.ilovepdf.com, qianji.xxoojoke.com, ssl-api.itranslateapp.com, xluser-ssl.xunlei.com, api.aliyundrive.com, dida365.com, backend.getdrafts.com, notability.com, awvp.aoscdn.com
 
 
 # 阿里云盘 首页优化
@@ -14,7 +14,8 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
 
 # 彩云天气 VIP 
-^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ColorWeather.js
+^https?:\/\/(biz|wrapper)\.cyapi\.cn\/(.+\/(user.+|visitors|activity)|p\/v\d\/vip_info) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/caiyun.js
+^http:\/\/adx\.sogaha\.cn\/sdk\/ad\/get url reject-200
 
 # 百度网盘 倍率/清晰度
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/BaiduCloud.js
