--- a/Rewrite/AdvertisingPlus.conf
+++ b/Rewrite/AdvertisingPlus.conf
@@ -1,8 +1,4 @@
-hostname = oia.zhihu.com,link.zhihu.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m,*.amemv.com,*.snssdk.com
-
-# > Douyin (By Choler)
-https?:\/\/(.+?)\.amemv\.com\/aweme\/v2\/feed\/ url request-header GET \/aweme\/v\d\/(.+\r\n) request-header GET /aweme/v1/$1
-https?:\/\/(.+?)\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/douyin.js
+hostname = oia.zhihu.com,link.zhihu.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m
 
 # > Zhihu (By blackmatrix7)
 # 知乎处理用户信息
