--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,8 +1,7 @@
-hostname = api.revenuecat.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, testflight.apple.com, pan.baidu.com, api.aliyundrive.com
+hostname = api.revenuecat.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, testflight.apple.com, pan.baidu.com
 
 
-# 阿里云盘 首页优化
-#^https?:\/\/api\.aliyundrive\.com\/apps\/v\d\/users\/apps\/widgets$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/alidrive.js
+
 
 # 扫描全能王 Pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
