--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,22 +1,11 @@
-hostname = api.revenuecat.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, testflight.apple.com, pan.baidu.com
+hostname = api.revenuecat.com, buy.itunes.apple.com, baimiao.uzero.cn, pan.baidu.com, backend.getdrafts.com
 
-
-
-
-# 扫描全能王 Pro
-^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
 
 # 百度网盘 倍率/清晰度
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/BaiduCloud.js
 
 # 白描 黄金会员
 ^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ScanScan.js
-
-# Bilibili 1080P+ 
-^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilifj.js
-
-# Bilibili 广告
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilibili_splash.js
 
 # Drafts 解锁订阅
 ^https:\/\/backend\.getdrafts\.com\/api\/v1\/verification\/verify_receipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Drafts.js
@@ -29,11 +18,3 @@ hostname = api.revenuecat.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.
 (?<=&mcc_mnc=)4 url 307 2
 ^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
 (?<=\d\/\?\w{7}_\w{4}=)1[6-9]..(?=.?.?&) url 307 17
-
-# TestFlight 下载修正
-^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
-
-# Workingcopy 解锁订阅
-^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
-
-
